# todo

./: LICENSE  README.md  database.py  models.py  pyproject.toml  requirements.txt  schemas.py  test.db  test_main.py  test_todo.db  todo.db
.github/workflows/: run_pytest.yml
app/: crud.py  main.py
routers/: todo.py
static/: app.js  index.html
tests/: test_main.py
todo/: config.py  crud.py  database.py  main.py  models.py  routers.py  schema.py  schemas.py
