[tool.poetry]
name = "todo"
version = "0.1.0"
description = "Simple todo list app."
authors = ["Patrick Nadeau <patrick.a.nadeau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
SQLAlchemy = "^2.0.31"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.9"

[tool.ruff]
line-length = 104
exclude = ["venv"]
per-file-ignores = { "__init__.py" = ["F401"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
